recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if (steps==0) {
		return
	}else 
	avance(lenght)
	droite(angle)
	spiral(steps-1, angle, lenght+increment, increment)
	
}
